--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
     "lucide-react": "^0.263.1",
+    "nanoid": "^4.0.2",
     "next": "13.4.13",
     "next-auth": "^4.22.5",
     "postcss": "8.4.27",
