--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
+    "react-qr-code": "^2.0.12",
     "sharp": "^0.32.4",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "0.0.0-insiders.4f404ff",
