--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "lint": "npm run lint:next && npm run lint:prettier",
+    "lint:next": "next lint --max-warnings=0 --dir .",
+    "lint:prettier": "prettier --check .",
+    "lint:fix": "eslint --fix && prettier --write ."
   },
   "dependencies": {
     "@hookform/resolvers": "^3.2.0",
