--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,9 +15,8 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '16'
-          cache: 'npm'
-      - run: npm ci
-      - run: npm run lint
+      - run: yarn ci
+      - run: yarn run lint
 
   lint-commits:
     name: Lint Commits
