refactor: add on pull request

--- a/.github/workflows/lint-pr.yml
+++ b/.github/workflows/lint-pr.yml
@@ -1,11 +1,11 @@
 name: lint-pr
 
 on:
-  pull_request_target:
-    types:
-      - opened
-      - edited
-      - synchronize
+  pull_request:
+    # types:
+    #   - opened
+    #   - edited
+    #   - synchronize
     branches:
       - '**'
 
